# teambook

./: CMakeLists.txt  README.md
assets/tests/strings/: lcp.7z
include/ngu_teambook/strings/: hash.hpp  suffix_array.hpp  suffix_tree.hpp
src/: CMakeLists.txt
src/strings/: hash.cpp  suffix_array.cpp  suffix_tree.cpp
tests/: CMakeLists.txt  test_strings.cpp  test_tools.hpp  teststrings.cpp
